--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PWA App</title>
   <link rel="manifest" href="manifest.json" />
+  <link rel="apple-touch-icon" href="pwa_icons/icon-192.png">
   <meta name="theme-color" content="#ffffff" />
   <style>
     body {
@@ -34,3 +35,4 @@
   </script>
 </body>
 </html>
+
